# sqr

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: index.html
src/: main.rs
src/app/: mod.rs  state.rs  text_editor.rs
src/db/: error.rs  mod.rs  query.rs  schema.rs
src/export/: csv.rs  json.rs  mod.rs
src/types/: diagram.rs  mod.rs  query.rs  table.rs
src/ui/: content.rs  diagram.rs  full_editor.rs  help.rs  info.rs  mod.rs  sql_editor.rs  tables.rs  text_editor.rs
src/worker/: mod.rs
