[package]
name = "sqr"
version = "0.1.0"
edition = "2021"
authors = ["sqr contributors"]
description = "A fast, keyboard-first TUI for exploring SQLite databases."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bunchhieng/sqr"
keywords = ["sqlite", "tui", "database", "explorer"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "sqr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.27"
crossterm = "0.28"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
base64 = "0.22"

